fixed footer and spacing

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,4 +1,19 @@
 @CHARSET "ISO-8859-1";
+html {
+	position: relative;
+	min-height: 100%;
+}
+body {
+	margin-bottom: 30px;
+}
+footer {
+	 text-align: center;
+	 position: absolute;
+	 bottom: 0;
+	 width: 100%;
+	 height: 30px;
+	 background-color: #f5f5f5;
+}
 .project{
 	margin-top: 20px;
 	background-color: WhiteSmoke;
@@ -10,7 +25,7 @@
 	margin: 10px;
 }
 .category-list, .filter-list, .skill-list, .social-media-list{
-	padding-left: 0px;
+	padding-left: 0;
 }
 .category, .skill, .filter, .remove-current-filter{
 	border-radius: 10px;
@@ -30,7 +45,7 @@
 	background-color: red;	
 }
 .remove-filter{
-	padding-left: 0px;
+	padding-left: 0;
 	display: none;
 }
 .skill-details .category-details{
@@ -38,9 +53,6 @@
 }
 .project-details, .biography{
 	overflow: hidden;
-}
-footer{
-    text-align:center;
 }
 .social-media{
 	margin: 2px;
